clusters/homelab/apps/qbittorrent/path.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  template:
    spec:
      containers:
        - image: linuxserver/qbittorrent:5.2.2
          name: qbittorrent
